RESOLVED FIXED290458
[GTK] REGRESSION(292580@main): Some printing API tests started failing recently
https://bugs.webkit.org/show_bug.cgi?id=290458
Summary [GTK] REGRESSION(292580@main): Some printing API tests started failing recently
Claudio Saavedra
Reported 2025-03-26 11:00:13 PDT
Found 3 new API test failures: /WebKitGTK/TestPrinting:/webkit/WebKitPrintOperation/print-errors, /WebKitGTK/TestPrinting:/webkit/WebKitPrintOperation/print, /WebKitGTK/TestPrinting:/webkit/WebKitPrintOperation/close-after-print /webkit/WebKitPrintOperation/print: FAIL ERROR:/app/webkit/Tools/TestWebKitAPI/glib/WebKitGLib/WebViewTest.cpp:81:static gboolean WebViewTest::webProcessTerminated(WebKitWebView*, WebKitWebProcessTerminationReason, WebViewTest*): code should not be reached ERROR: Failed to make thread real time: GDBus.Error:org.gtk.GDBus.UnmappedGError.Quark._g_2dio_2derror_2dquark.Code1: Could not map tid: Process ids could not be found: 36501 /app/webkit/Source/WTF/wtf/linux/RealTimeThreads.cpp(224) : void WTF::RealTimeThreads::realTimeKitMakeThreadRealTime(uint64_t, uint64_t, uint32_t) ERROR: Failed to make thread real time: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name org.freedesktop.RealtimeKit1 was not provided by any .service files /app/webkit/Source/WTF/wtf/linux/RealTimeThreads.cpp(224) : void WTF::RealTimeThreads::realTimeKitMakeThreadRealTime(uint64_t, uint64_t, uint32_t) Mesa: The provided filesystem timestamp for the cache is bogus! Disabling On-disk cache. ERROR: Unhandled web process message 'WebPage_RegisterURLSchemeHandler' (destination: 20 pid: 36507) /app/webkit/Source/WebKit/WebProcess/WebProcess.cpp(1033) : virtual bool WebKit::WebProcess::filterUnhandledMessage(IPC::Connection&, IPC::Decoder&) Mesa: The provided filesystem timestamp for the cache is bogus! Disabling On-disk cache. /app/webkit/Source/ThirdParty/skia/src/pdf/SkPDFDocument.cpp:714: fatal error: "Must set both a jpegDecoder and jpegEncoder to create PDFs" GLib-GIO-DEBUG: Using cross-namespace EXTERNAL authentication (this will deadlock if server is GDBus < 2.73.3) GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created /webkit/WebKitPrintOperation/print-errors: FAIL GLib-GIO-DEBUG: _g_io_module_get_default: Found default implementation local (GLocalVfs) for ‘gio-vfs’ ERROR:/app/webkit/Tools/TestWebKitAPI/Tests/WebKitGtk/TestPrinting.cpp:95:static void PrintTest::printFinishedCallback(WebKitPrintOperation*, PrintTest*): assertion failed (test->m_expectedError == 0): (599 == 0) Mesa: The provided filesystem timestamp for the cache is bogus! Disabling On-disk cache. ERROR: Failed to make thread real time: GDBus.Error:org.gtk.GDBus.UnmappedGError.Quark._g_2dio_2derror_2dquark.Code1: Could not map tid: Process ids could not be found: 36737 /app/webkit/Source/WTF/wtf/linux/RealTimeThreads.cpp(224) : void WTF::RealTimeThreads::realTimeKitMakeThreadRealTime(uint64_t, uint64_t, uint32_t) ERROR: Failed to make thread real time: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name org.freedesktop.RealtimeKit1 was not provided by any .service files /app/webkit/Source/WTF/wtf/linux/RealTimeThreads.cpp(224) : void WTF::RealTimeThreads::realTimeKitMakeThreadRealTime(uint64_t, uint64_t, uint32_t) Mesa: The provided filesystem timestamp for the cache is bogus! Disabling On-disk cache. ERROR: Unhandled web process message 'WebPage_RegisterURLSchemeHandler' (destination: 10 pid: 36741) /app/webkit/Source/WebKit/WebProcess/WebProcess.cpp(1033) : virtual bool WebKit::WebProcess::filterUnhandledMessage(IPC::Connection&, IPC::Decoder&) Mesa: The provided filesystem timestamp for the cache is bogus! Disabling On-disk cache. /app/webkit/Source/ThirdParty/skia/src/pdf/SkPDFDocument.cpp:714: fatal error: "Must set both a jpegDecoder and jpegEncoder to create PDFs" GLib-GIO-DEBUG: Using cross-namespace EXTERNAL authentication (this will deadlock if server is GDBus < 2.73.3) GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created /webkit/WebKitPrintOperation/close-after-print: FAIL GLib-GIO-DEBUG: _g_io_module_get_default: Found default implementation local (GLocalVfs) for ‘gio-vfs’ ERROR:/app/webkit/Tools/TestWebKitAPI/glib/WebKitGLib/WebViewTest.cpp:81:static gboolean WebViewTest::webProcessTerminated(WebKitWebView*, WebKitWebProcessTerminationReason, WebViewTest*): code should not be reached Mesa: The provided filesystem timestamp for the cache is bogus! Disabling On-disk cache. ERROR: Failed to make thread real time: GDBus.Error:org.gtk.GDBus.UnmappedGError.Quark._g_2dio_2derror_2dquark.Code1: Could not map tid: Process ids could not be found: 36967 /app/webkit/Source/WTF/wtf/linux/RealTimeThreads.cpp(224) : void WTF::RealTimeThreads::realTimeKitMakeThreadRealTime(uint64_t, uint64_t, uint32_t) ERROR: Failed to make thread real time: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name org.freedesktop.RealtimeKit1 was not provided by any .service files /app/webkit/Source/WTF/wtf/linux/RealTimeThreads.cpp(224) : void WTF::RealTimeThreads::realTimeKitMakeThreadRealTime(uint64_t, uint64_t, uint32_t) Mesa: The provided filesystem timestamp for the cache is bogus! Disabling On-disk cache. ERROR: Unhandled web process message 'WebPage_RegisterURLSchemeHandler' (destination: 10 pid: 36971) /app/webkit/Source/WebKit/WebProcess/WebProcess.cpp(1033) : virtual bool WebKit::WebProcess::filterUnhandledMessage(IPC::Connection&, IPC::Decoder&) Mesa: The provided filesystem timestamp for the cache is bogus! Disabling On-disk cache. /app/webkit/Source/ThirdParty/skia/src/pdf/SkPDFDocument.cpp:714: fatal error: "Must set both a jpegDecoder and jpegEncoder to create PDFs" GLib-GIO-DEBUG: Using cross-namespace EXTERNAL authentication (this will deadlock if server is GDBus < 2.73.3) GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created
Attachments
Claudio Saavedra
Comment 1 2025-03-26 11:05:54 PDT
This might be a regression of the latest skia update: https://github.com/WebKit/WebKit/pull/42886
Claudio Saavedra
Comment 2 2025-03-26 11:09:42 PDT
Claudio Saavedra
Comment 3 2025-03-26 11:30:57 PDT
Adrian Perez
Comment 4 2025-03-31 05:35:32 PDT
This was caused by commit https://skia.googlesource.com/skia.git/+/0f44c50a71c6bb9ae995d1df6ef0338c8de80ac2 which got imported in the Skia update done in 292580@main -- I'll have a fix momentarily.
Adrian Perez
Comment 5 2025-03-31 05:46:20 PDT
EWS
Comment 6 2025-03-31 07:27:40 PDT
Committed 292930@main (16989751e812): <https://commits.webkit.org/292930@main> Reviewed commits have been landed. Closing PR #43309 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.