[GTK] REGRESSION(292580@main): Some printing API tests started failing recently https://bugs.webkit.org/show_bug.cgi?id=290458

Reviewed by Carlos Garcia Campos.

After 292580@main Skia no longer uses its built-in JPEG decode/encode
support for creating PDFs by default, and it allows customizing which
implementation gets used. The existing helpers, which were being used
implicitly before, are still available, so use them to have printing
through the Skia PDF support working again.

* Tools/TestWebKitAPI/glib/TestExpectations.json: Re-enable tests
previously gardened in 292716@main.
* Source/WebKit/WebProcess/WebPage/gtk/WebPrintOperationGtk.cpp:
(WebKit::WebPrintOperationGtk::endPrint): Use the Skia built-in JPEG
decode/encode helpers.

Canonical link: https://commits.webkit.org/292930@main