Source/WebKit/WebProcess/WebPage/gtk/WebPrintOperationGtk.cpp
@@ -59,6 +59,7 @@
 #elif USE(SKIA)
 #include <WebCore/GraphicsContextSkia.h>
 #include <skia/docs/SkPDFDocument.h>
+#include <skia/docs/SkPDFJpegHelpers.h>
 #endif
 
 namespace WebKit {
@@ -392,6 +393,8 @@ void WebPrintOperationGtk::endPrint()
     SkPDF::Metadata metadata;
     metadata.fCreation = skiaDateTimeNow();
     metadata.fModified = metadata.fCreation;
+    metadata.jpegDecoder = SkPDF::JPEG::Decode;
+    metadata.jpegEncoder = SkPDF::JPEG::Encode;
     if (m_printContext) {
         if (auto* document = m_printContext->frame()->document()) {
             auto title = document->title().utf8();
